# java_and_jin

./: README.md  java和jin开发及打包.pptx  ubuntu开发环境安装配置.md
c/: CMakeLists.txt  JinMain.c  JinMain.h  KcCore.h  KcUtility.h  stringbuffer.c  stringbuffer.h
java/: java.sh  pom.xml
java/src/main/java/: cn_kuncb_JinExternal.h
java/src/main/java/cn/kuncb/: JinExternal.java  JinMain.java  Main.java
